--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,8 +1,3 @@
-
-tmp
-
-
-
 # Logs
 logs
 *.log
@@ -18,7 +13,7 @@ dist-ssr
 *.local
 
 # Editor directories and files
-.vscode
+.vscode/*
 !.vscode/extensions.json
 .idea
 .DS_Store
