--- a/k8s.yaml
+++ b/k8s.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: learn-go
+  labels:
+    app: learn-go
 spec:
   replicas: 1
   selector:
@@ -28,7 +30,7 @@ spec:
   ports:
     - port: 8080
       targetPort: 8080
-      nodePort: 30080
+      nodePort: 32341
   selector:
     app: learn-go
 
